all files changed

--- a/index.html
+++ b/index.html
@@ -330,9 +330,9 @@
                 </div>
                 <div class="todolist__filter">
                   <div class="todolist__filter-items">
-                    <span class="all sort" data-filter="all">All</span>
-                    <span class="complete sort" data-filter="Completed">Completed</span>
-                    <span class="uncompleted sort" data-filter="Uncompleted">Uncompleted</span>
+                    <span class="all" data-filter="all">All</span>
+                    <span class="completed" data-filter="completed">Completed</span>
+                    <span class="uncompleted" data-filter="uncompleted">Uncompleted</span>
                   </div>
                 </div>
                 <form class="todolist__form">
